k3s/stack/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdvision
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: crowdvision-backend
                port:
                  name: http
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: crowdvision-backend
                port:
                  name: http
          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: crowdvision-backend
                port:
                  name: http
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: crowdvision-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowdvision-frontend
                port:
                  name: http
